# persona-evals

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
ai_personality_eval/: __init__.py  packs.py  runner.py  scoring.py  validate_pack.py  validation.py
ai_personality_eval/data/: __init__.py  ai-personality-v0.1.json
configs/: boyue_broad_jobs_20260414.json  boyue_broad_models_20260414.json
jobs/: list_boyue_models.sh  run_boyue_personality_eval.sh
tests/: test_env_loading.py  test_pack_shape.py  test_runner.py  test_scoring.py  test_web_results.py
web/: app.js  index.html  styles.css
web/data/: results.json
