[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-personality-eval"
version = "0.1.0"
description = "MBTI-like and SBTI-style personality evaluation for LLMs."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ai-personality-eval = "ai_personality_eval.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_personality_eval*"]

[tool.setuptools.package-data]
ai_personality_eval = ["data/*.json"]
