[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-evals"
version = "0.1.0"
description = "MBTI-style and SBTI-style persona probes for LLM and agent behavior."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
persona-evals = "ai_personality_eval.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_personality_eval*"]

[tool.setuptools.package-data]
ai_personality_eval = ["data/*.json"]
